--- a/friendFilter-content.hbs
+++ b/friendFilter-content.hbs
@@ -6,10 +6,10 @@
 
     <div class="filter-block">
         <div class="filter-friends">
-            <input type="text" data-main="filter_friends" name="name" placeholder="Начните вводить имя друга">
+            <input type="text" data-main="filter_friends" name="filter-left" placeholder="Начните вводить имя друга">
         </div>
         <div class="filter-sort">
-            <input type="text" name="name" placeholder="Название">
+            <input type="text" name="filter-right" placeholder="Название">
         </div>
     </div>
 
